biskit/src/main/java/com/example/biskit/errors/MascotaInactivaException.java
package com.example.biskit.errors;

public class MascotaInactivaException extends RuntimeException {

    public MascotaInactivaException(String message) {
        super(message);
    }
}